--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
     --pressed-color: #404BBF;
     --light-color: #F4F4FD;
     --background-color: #ffffff;
+    --gradient-bg:linear-gradient(rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7));
 }
 
 body {
@@ -124,6 +125,12 @@ ul{
     padding-bottom: 188px;
     background-color: var(--first-brand-color);
     text-align: center;
+    background-image:var(--gradient-bg), url(../images/hero-bg.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    max-width:1440px ;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .hero-subject {
@@ -183,6 +190,22 @@ ul{
 
 .future-item:not(:last-child)
 {margin-right: 24px}
+
+.future-icon-svg{
+    display: flex;
+    width: 264px;
+    height: 112px;
+    background: var(--light-color);
+    border-radius: 4px;
+    margin-bottom: 8px;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 8px;
+}
+.icon-antenna::before{
+    background-repeat: no-repeat;
+    background-position: center;
+}
 .future-title {
     margin-bottom: 8px;
     font-family: 'Roboto', sans-serif;
@@ -264,6 +287,7 @@ ul{
     line-height: 1.5;
     text-align: center;
     letter-spacing: 0.02em;
+    margin-bottom: 8px;
 }
 .img-team{
     display: block;
@@ -272,12 +296,77 @@ ul{
      padding-top: 32px;
      padding-bottom: 32px;
 }
-/* footer */
+.team-soc-list {
+display: flex;
+justify-content: center;
+gap: 24px;
+}
+.team-soc-item {
+    width: 40px;
+    height: 40px;
+}
+.team-soc-link {
+display: flex;
+width: 100%;
+height: 100%;
+border-radius: 50%;
+background-color: var(--secondary_brand-color);
+align-items: center;
+justify-content: center;
+}
+.team-soc-link:hover,
+.team-soc-link:focus{
+    background-color: var(--pressed-color);
+}
+/* -------------------------------custumers -----------------------*/
+.cust-list{
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+}
+.cust-item{
+    width: 168px;
+    height: 88px;
+    border: 1px solid #8E8F99;
+    border-radius: 4px;
+}
+.cust-item:hover,
+.cust-item:focus{
+    border: 1px solid var(--pressed-color);;
+}
+.cust-link{
+display: flex;
+width: 100%;
+height: 100%;
+justify-content: center;
+align-items: center;
+
+
+}
+.cust-icon{
+    fill: #8E8F99;
+    width: 104px;
+    height: 56px;
+}
+.cust-link:hover>.cust-icon,
+.cust-link:focus>.cust-icon{
+fill: var(--pressed-color);
+}
+/* --------------------------------footer -------------------------*/
 .footer {
+    display: flex;
     background-color: var(--first-brand-color);
     padding-top: 100px;
     padding-bottom: 100px;
    
+}
+.footer-wrapper{
+    display: flex;
+    width: 1158px;
+    margin: 0 auto;
+}
+.footer-wrap{
+    margin-right: 120px;
 }
 .footer-text {
     display: inline-block;
@@ -305,6 +394,43 @@ ul{
 .logo-footer-color {
     color: var(--light-color);
 }
+/* ----------------------------footer-soc ----------------------------*/
+.soc-title{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #FFFFFF;
+    margin-bottom: 16px;
+}
+.footer-soc{
+    display: flex;
+}
+.footer-soc-list {
+    display: flex;
+    justify-content: flex-start;
+    gap: 16px;
+    }
+    .footer-soc-item {
+        width: 40px;
+        height: 40px;
+    }
+    .footer-soc-link {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: var(--secondary_brand-color);
+    
+    align-items: center;
+    justify-content: center;
+    }
+    .footer-soc-link:hover,
+    .footer-soc-link:focus{
+        background-color: #31D0AA;
+    }
 /* portfolio */
 .portfolio {
     padding-top: 96px;
@@ -348,6 +474,10 @@ ul{
     
     margin-right: 24px;
     margin-bottom:48px ;
+}
+.portfolio-items:hover,
+.portfolio-items:focus{
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .portfolio-items:nth-child(3n) {
     margin-right: 0;
