--- a/css/styles.css
+++ b/css/styles.css
@@ -350,7 +350,8 @@ width: 100%;
 height: 100%;
 justify-content: center;
 align-items: center;
-
+border: 1px solid #8E8F99;
+border-radius: 4px;
 
 }
 .cust-icon{
@@ -358,9 +359,14 @@ align-items: center;
     width: 104px;
     height: 56px;
 }
+.cust-link:hover,
+.cust-link:focus{
+    border: 1px solid var(--pressed-color);
+}
 .cust-link:hover>.cust-icon,
 .cust-link:focus>.cust-icon{
 fill: var(--pressed-color);
+
 }
 /* --------------------------------footer -------------------------*/
 .footer {
@@ -484,9 +490,15 @@ fill: var(--pressed-color);
     
     margin-right: 24px;
     margin-bottom:48px ;
+
+   
 }
-.portfolio-items:hover,
-.portfolio-items:focus{
+.portfolio-img{
+    border: 1px solid #E7E9FC;
+}
+.portfolio-img:hover,
+.portfolio-img:focus{
+    border: 1px solid var(--light-color);
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .portfolio-items:nth-child(3n) {
