--- a/css/styles.css
+++ b/css/styles.css
@@ -485,28 +485,21 @@ fill: var(--pressed-color);
 .portfilio-list {
     display: flex;
     flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 48px;
 }
 .portfolio-items {
     
-    margin-right: 24px;
-    margin-bottom:48px ;
-
+ width: 360px;
    
 }
 .portfolio-img{
-    border: 1px solid #E7E9FC;
+    display: block;
 }
 .portfolio-img:hover,
 .portfolio-img:focus{
-    border: 1px solid var(--light-color);
+   
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-}
-.portfolio-items:nth-child(3n) {
-    margin-right: 0;
-}
-.portfolio-items:nth-last-child(-n+3)
-{
-    margin-bottom: 0;
 }
 .portfolio-caption{
     border-right: 1px solid #E7E9FC;
